deployment/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-mostashkin
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cv-mostashkin
  type: ClusterIP
